// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContainer CardContainer component matches the snapshot 1`] = `
<main>
  <div
    className="cc-title-group"
  >
    <h2
      className="cc-title"
    >
      Latest Immigration News
    </h2>
  </div>
  <div
    className="CardContainer"
  >
    <Connect(Card)
      author="CLAIRE CAIN MILLER"
      content="Transgender people are appearing more often in advertisements and mass media. But when they do, its very often in stock photos that show them standing against a blank wall, or else they are hardly seen at all. The most used stock photos are close-ups of their… [+1039 chars]"
      description="The most used photo of a transgender person from Getty Images’s stock photo library shows the transgender pride symbol — but only part of the person’s face."
      isSaved={false}
      key="https://www.nytimes.com/2018/10/25/upshot/what-being-transgender-looks-like-according-to-stock-photography.html"
      published="2018-10-25"
      source="The New York Times"
      title="What Being Transgender Looks Like, According to Stock Photography"
      url="https://www.nytimes.com/2018/10/25/upshot/what-being-transgender-looks-like-according-to-stock-photography.html"
      urlToImage="https://static01.nyt.com/images/2018/10/23/upshot/oakImage-1540334490988/oakImage-1540334490988-facebookJumbo.jpg"
    />
    <Connect(Card)
      author="Victoria Rodriguez"
      content="There are many reasons you should learn how to be an ally to trans people. First, transgender rights are human rights it's that simple. Trans people regularly encounter discrimination in everyday settings, such as workplaces, schools, and doctor's offices. Th… [+8478 chars]"
      description="There are many reasons you should learn how to be an ally to trans people. First, transgender rights are human rights — it's that simple. Trans people regularly encounter discrimination in everyday settings, such as workplaces, schools, and doctor's offices. …"
      isSaved={false}
      key="https://mashable.com/article/transgender-rights-how-to-be-an-ally/"
      published="2018-10-23"
      source="Mashable"
      title="How to be an ally who stands with transgender people"
      url="https://mashable.com/article/transgender-rights-how-to-be-an-ally/"
      urlToImage="https://i.amz.mshcdn.com/5pzXh7-L0211KSsQEfj9UV4v23o=/1200x630/2018%2F10%2F23%2Fd5%2Febde5e356f604ebeaa4548bdc4c4da6a.9e146.jpg"
    />
  </div>
</main>
`;

exports[`CardContainer CardContainer component matches the snapshot if location is /saved 1`] = `
<main>
  <div
    className="cc-title-group"
  >
    <button
      className="cc-back-btn"
      onClick={[Function]}
    >
      ← Back
    </button>
    <h2
      className="cc-title"
    >
      Saved Stories
    </h2>
    <div
      className="cc-placeholder"
    />
  </div>
  <div
    className="CardContainer"
  >
    <div
      className="cc-no-saved"
    >
      <h3>
        You have no saved stories.
      </h3>
      <p>
        Click the sun icon in the upper right corner of any article to save a story.
      </p>
    </div>
  </div>
</main>
`;

exports[`CardContainer CardContainer component should render the Loader if isLoading(true) 1`] = `
<main>
  <div
    className="cc-title-group"
  >
    <h2
      className="cc-title"
    >
      Latest Immigration News
    </h2>
  </div>
  <div
    className="CardContainer"
  >
    <Loader />
  </div>
</main>
`;
